--- a/cookbooks/bcpc/templates/default/cobbler.bcpc_ubuntu_host.preseed.erb
+++ b/cookbooks/bcpc/templates/default/cobbler.bcpc_ubuntu_host.preseed.erb
@@ -15,8 +15,8 @@ d-i     console-setup/layoutcode        string us
 d-i     console-setup/variantcode       string 
 d-i     netcfg/get_nameservers  string <%= @node[:bcpc][:dns_servers].join(' ') %>
 d-i     netcfg/get_ipaddress    string 
-d-i     netcfg/get_netmask      string 255.255.255.0
-d-i     netcfg/get_gateway      string 
+d-i     netcfg/get_netmask      string <%= @node[:bcpc][:management][:netmask] %>
+d-i     netcfg/get_gateway      string <%= @node[:bcpc][:management][:gateway] %>
 d-i     netcfg/confirm_static   boolean true
 
 d-i     partman/early_command string \
@@ -46,7 +46,7 @@ d-i     partman/confirm_nooverwrite boolean true
 d-i     partman/default_filesystem string ext4
 
 d-i     clock-setup/utc boolean true
-d-i     clock-setup/ntp boolean true
+d-i     clock-setup/ntp boolean true <%= @node[:bcpc][:ntp_servers].first %>
 d-i     clock-setup/ntp-server  string <%= @node[:ntp][:servers].first %>
 # This will install the base 12.04 kernel image.  If you comment out the
 # following line, it will install the upgraded kernel LTS stack.
@@ -69,18 +69,12 @@ d-i     mirror/http/proxy string <%= @node[:bcpc][:bootstrap][:proxy] %>
 <% if @node[:bcpc][:bootstrap][:mirror].nil? %>
 d-i     apt-setup/security_host string security.ubuntu.com
 d-i     apt-setup/security_path string /ubuntu
-d-i     apt-setup/local0/comment string OpsCode Repo
-d-i     apt-setup/local0/repository string \
-          deb http://apt.opscode.com/chef precise-0.10 main
 <% else %>
 d-i     mirror/country string manual
 d-i     mirror/http/hostname string <%= @node[:bcpc][:bootstrap][:mirror] %>
 d-i     mirror/http/directory string /ubuntu
 d-i     apt-setup/security_host <%= @node[:bcpc][:bootstrap][:mirror] %>
 d-i     apt-setup/security_path string /ubuntu
-d-i     apt-setup/local0/comment string OpsCode Repo
-d-i     apt-setup/local0/repository string \
-          deb http://<%= @node[:bcpc][:bootstrap][:mirror] %>/chef precise-0.10 main
 <% end %>
 
 d-i     debian-installer/allow_unauthenticated  string false
@@ -97,7 +91,7 @@ d-i     finish-install/reboot_in_progress       note
 d-i     cdrom-detect/eject      boolean true
 d-i     debian-installer/exit/halt      boolean false
 d-i     debian-installer/exit/poweroff  boolean false
-d-i     pkgsel/include string openssh-server
+d-i     pkgsel/include string openssh-server lldpd
 
-d-i     preseed/late_command string true && \
+d-i     preseed/late_command string <%= @node[:bcpc][:bootstrap][:preseed][:late_command] %> && \
         wget "http://$http_server:$http_port/cblr/svc/op/nopxe/system/$system_name" -O /dev/null
