Enable HBase snapshot

--- a/cookbooks/bcpc-hadoop/templates/default/hb_hbase-site.xml.erb
+++ b/cookbooks/bcpc-hadoop/templates/default/hb_hbase-site.xml.erb
@@ -52,4 +52,8 @@
     <name>hbase.master.dns.nameserver</name>
     <value><%= @dns_server %></value> 
   </property>
+  <property>
+    <name>hbase.snapshot.enabled</name>
+    <value>true</value>
+  </property>
 </configuration>
